--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="/css/styles.css">
+   <link rel="stylesheet" href="css/styles.css">
    <title>Frontend Mentor | E-commerce product page</title>
    </style>
 </head>
@@ -82,13 +82,13 @@
                   </div>
                </div>
             </div>
-            <img id="profile-img" src="/images/image-avatar.png" alt="avatar">
+            <img id="profile-img" src="images/image-avatar.png" alt="avatar">
          </div>
       </nav>
       <section id="product-container">
          <div class="product-pictures">
             <button class="img-display">
-               <img src="/images/image-product-1.jpg" alt="shoes">
+               <img src="images/image-product-1.jpg" alt="shoes">
             </button>
             <button id="mobile-prev" class="circle-btn">
                <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
@@ -102,16 +102,16 @@
             </button>
             <div class="img-thumb-container">
                <button class="img-thumb selected">
-                  <img src="/images/image-product-1-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-1-thumbnail.jpg" alt="shoes">
                </button>
                <button class="img-thumb">
-                  <img src="/images/image-product-2-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-2-thumbnail.jpg" alt="shoes">
                </button>
                <button class="img-thumb">
-                  <img src="/images/image-product-3-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-3-thumbnail.jpg" alt="shoes">
                </button>
                <button class="img-thumb">
-                  <img src="/images/image-product-4-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-4-thumbnail.jpg" alt="shoes">
                </button>
             </div>
          </div>
@@ -178,7 +178,7 @@
                   </svg>
                </button>
                <button class="img-display">
-                  <img src="/images/image-product-1.jpg" alt="shoes">
+                  <img src="images/image-product-1.jpg" alt="shoes">
                </button>
                <button id="lightbox-prev" class="circle-btn">
                   <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
@@ -194,16 +194,16 @@
             </div>
             <div class="img-thumb-container">
                <button class="img-thumb selected">
-                  <img src="/images/image-product-1-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-1-thumbnail.jpg" alt="shoes">
                </button>
                <button class="img-thumb">
-                  <img src="/images/image-product-2-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-2-thumbnail.jpg" alt="shoes">
                </button>
                <button class="img-thumb">
-                  <img src="/images/image-product-3-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-3-thumbnail.jpg" alt="shoes">
                </button>
                <button class="img-thumb">
-                  <img src="/images/image-product-4-thumbnail.jpg" alt="shoes">
+                  <img src="images/image-product-4-thumbnail.jpg" alt="shoes">
                </button>
             </div>
          </div>
@@ -215,7 +215,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-   <script src="./js/app.js" type="module"></script>
+   <script src="js/app.js" type="module"></script>
 </body>
 
 </html>
