--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="css/styles.css">
-   <title>Frontend Mentor | E-commerce product page</title>
+   <title>E-commerce product page</title>
    </style>
 </head>
 
